# gnome-control-center

./: Makefile.in  aclocal.m4  config.h.in  configure  pop-shell.sh
.bzr-builddeb/: default.conf
debian/: capplets-data.gconf-defaults  capplets-data.install  capplets-data.postinst  capplets-data.preinst  capplets.install  changelog  control  control.in  copyright  gbp.conf  gnome-control-center-data.install  gnome-control-center-data.links  gnome-control-center-data.maintscript  gnome-control-center-data.migrations  gnome-control-center-data.postinst  gnome-control-center-dev.install  gnome-control-center-faces.install  gnome-control-center-shared-data.install  gnome-control-center.1  gnome-control-center.dirs  gnome-control-center.install  gnome-control-center.links  gnome-control-center.lintian-overrides  gnome-control-center.manpages  gnome-control-center.menu  gnome-control-center.pkla  gnome-control-center.postinst  gnome-control-center.postrm  gnome-control-center.sgml  gnome-control-center.sh  gnome-font-viewer.desktop  gnome-keyboard-properties.1  index.theme  libgnome-control-center-dev.install  libgnome-control-center1.install  libgnome-control-center1.symbols  libgnome-settings-daemon-dev.install  libgnome-window-settings-dev.install  libgnome-window-settings1.install  libslab-dev.install  (+8 more)
debian/old_patches/: 00list  01_gnome-default-applications-properties-structs.c.dpatch  02_Makefile.in.dpatch  03_xrdb.dpatch  04_icons_path.dpatch  05_fontilus.dpatch
debian/patches/: 0001-Expose-touchpad-settings-if-synaptics-is-in-use.patch  0001-Revert-Monitor-NMClient-permissions-for-change.patch  0001-Revert-sharing-Remove-vino-preferences.patch  0001-Simplify-usage-of-g_variant_iter_loop.patch  0001-applications-Add-a-run-in-background-switch.patch  0001-applications-Add-missing-whitespace.patch  0001-applications-Fix-builtin-permissions-showing-when-no.patch  0001-applications-Fix-link-to-privacy-panel.patch  0001-applications-Fix-wrong-IDs-being-passed-to-portal-pe.patch  0001-applications-Rename-functions-as-portal-permssions-a.patch  0001-applications-Show-portal-permissions-for-snaps.patch  0001-applications-Show-snap-app-sizes.patch  0001-applications-Show-snap-interface-controls.patch  0001-meson-drop-unused-argument-for-i18n.merge_file.patch  0001-online-accounts-Accept-requests-for-account-creation.patch  0001-online-accounts-handle-unbranded-chat-providers.patch  0001-online-accounts-use-the-async-function-to-get-all-th.patch  0001-region-Fix-input-source-options-not-being-applied.patch  0001-rfkill-glib-Don-t-use-g_assert_not_reached-in-type_t.patch  0001-shell-Don-t-set-per-panel-icon.patch  0001-shell-Fix-bug-when-multiple-panels-use-custom-sideba.patch  0001-sound-Apply-device-changes.patch  0001-sound-Fix-crash-when-sound-device-set-to-NULL.patch  0001-sound-Fix-translation-of-System-Sounds.patch  0002-Debian-s-adduser-doesn-t-allow-uppercase-letters-by-.patch  0002-Revert-sharing-Replace-vino-with-gnome-remote-deskto.patch  0002-applications-Add-missing-whitespace.patch  0002-mouse-Make-touchpad-capability-checking-on-wayland-w.patch  0002-shell-Icon-name-helper-returns-symbolic-name.patch  0002-users-Recreate-RunHandler-on-failure.patch  0003-applications-Fix-builtin-permissions-showing-when-no.patch  0003-info-Switch-around-GNOME-and-distro-information.patch  0003-info-overview-Use-the-Ubuntu-logo-prominently.patch  0003-thunderbolt-new-panel-for-device-management.patch  0004-Display-locale-modifiers-properly.patch  0004-applications-Rename-functions-as-portal-permssions-a.patch  0004-thunderbolt-move-to-the-Devices-page.patch  0005-Adapts-the-region-capplet-and-the-language-chooser-i.patch  0005-applications-Show-portal-permissions-for-snaps.patch  0005-region-Show-scrollbars-if-needed.patch  (+507 more)
debian/source/: include-binaries
debian/upstream/: metadata
libgd/: Makefile.am  Makefile.in
libgd/libgd/: gd-notification.c  gd-two-lines-renderer.c
man/: Makefile.in
panels/: Makefile.in
panels/background/: Makefile.in  cc-background-resources.c  cc-background-resources.h  gdesktop-enums-types.c  gdesktop-enums-types.h
panels/bluetooth/: Makefile.in  cc-bluetooth-resources.c  cc-bluetooth-resources.h
panels/color/: Makefile.in  cc-color-resources.c  cc-color-resources.h
panels/common/: Makefile.in  cc-common-resources.c  cc-common-resources.h  gsd-common-enums.c  gsd-common-enums.h
panels/datetime/: Makefile.in  cc-datetime-resources.h  timedated.c  timedated.h
panels/display/: Makefile.in
panels/info/: Makefile.in  cc-info-resources.c  cc-info-resources.h  gnome-info-overview-panel.desktop.in.in
panels/keyboard/: 10-pop-shell.xml.in  Makefile.in  cc-input-chooser.c  cc-input-row.c  cc-input-row.ui  cc-keyboard-item.c  cc-keyboard-item.h  cc-keyboard-panel.c  cc-keyboard-panel.ui  cc-keyboard-resources.c  cc-keyboard-resources.h  cc-keyboard-shortcut-dialog.c  cc-keyboard-shortcut-dialog.ui  cc-keyboard-shortcut-editor.c  cc-keyboard-shortcut-editor.ui  cc-keyboard-shortcut-row.c  cc-keyboard-shortcut-row.ui  cc-xkb-modifier-dialog.c  cc-xkb-modifier-dialog.ui  meson.build
po/: POTFILES.in  af.po  an.po  ar.po  as.po  be.po  bg.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  kn.po  (+33 more)
search-provider/: Makefile.in  cc-shell-search-provider-generated.c  cc-shell-search-provider-generated.h
shell/: Makefile.in  resources.c  style.css
subprojects/gvc/: .gitignore  .gitlab-ci.yml  Makefile.am  Makefile.tests  README.md  config.h.meson  gvc-mixer-card.c  gvc-mixer-control.c  gvc-mixer-stream.c  gvc-mixer-stream.h  gvc-mixer-ui-device.c  gvc-pulseaudio-fake.h  libgnome-volume-control.doap  meson.build  meson_options.txt  test-audio-device-selection.c
subprojects/gvc/.gitlab-ci/: meson.build
subprojects/gvc/tests-include/: config.h
subprojects/libgd/: Makefile.am  libgd.m4  meson.build
subprojects/libgd/libgd/: gd.h  meson.build
(+235 files in other folders)
