option('package_name',
  type: 'string',
  value: '',
  description: 'The value for the GETTEXT_PACKAGE define.'
)

option('package_version',
  type: 'string',
  value: '',
  description: 'The value for the PACKAGE_VERSION define.'
)

option('pkglibdir',
  type: 'string',
  value: '',
  description: 'The private directory the shared library/typelib will be installed into.'
)

option('pkgdatadir',
  type: 'string',
  value: '',
  description: 'The private directory the gir file will be installed into.'
)

option('alsa',
  type: 'boolean',
  value: true,
  description: 'Build ALSA support.'
)

option('static',
  type: 'boolean',
  value: false,
  description: 'Build as a static library.'
)

option('introspection',
  type: 'boolean',
  value: false,
  description: 'Build gobject-introspection support'
)
